working on front-end

--- a/static-ui/landing-page.html
+++ b/static-ui/landing-page.html
@@ -12,8 +12,8 @@
 		<!-- Font Awesome Link -->
 		<script src="https://use.fontawesome.com/46c6e23a21.js"></script>
 
-		<!-- Skapa Development CSS -->
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<!-- Tux CSS -->
+		<link rel="stylesheet" type="text/css" href="/static-ui/style.css">
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -36,6 +36,7 @@
 
 		<!--Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet">
 
 		<!-- Tux Favicon -->
 		<link rel="shortcut icon" href=""
@@ -67,7 +68,7 @@
 			</div>
 		</nav>
 		<!-- Jumbotron-->
-		<div class="jumbotron jumbotron-fluid">
+		<div class="jumbotron jumbotron-fluid" id="landing-page-jumbo">
 			<div class="container">
 				<h1 class="display-3">Tux</h1>
 				<p class="lead">Modern Management for the Modern Man</p>
@@ -88,7 +89,7 @@
 		<div class="container-fluid m-4">
 			<div class="row">
 				<div class="col-md-6 align-self-center">
-					<h2>One Stop Shop</h2>
+					<h2 class="section-title">ONE STOP SHOP</h2>
 					<p>We handle every part of the process all you need to do is create your event, and choose your tux shop
 						and add your groomsmen's details.</p>
 					<p>We can the emails, send reminders and get your groomsman information to the store without any work
@@ -109,39 +110,42 @@
 					<h2>Your Job</h2>
 					<h3>The Easy Party</h3>
 					<div>
-						<h4><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign-Up</h4>
+						<h4><span class="step">01</span> Sign-Up</h4>
 						<p>Provide your name and email as well as your a few wedding details.</p>
 					</div>
 					<div>
-						<h4><i class="fa fa-hand-pointer-o" aria-hidden="true"></i> Choose Your Store</h4>
+						<h4><span class="step">02</span> Choose Your Store</h4>
 						<p>It is as easy as looking up your store by name, location, email or phone.</p>
 					</div>
 
 					<div>
-						<h4><i class="fa fa-user-plus" aria-hidden="true"></i> Add Your Groomsman Detail</h4>
+						<h4><span class="step">03</span> Add Your Groomsman Detail</h4>
 						<p>All we ask for is there name and email to get them started</p>
 					</div>
 				</div>
-				<div class="col-md-6"></div>
+				<div class="col-md-6 landing-image">
+					<img src="#" alt="computer image" id="computer image">
+				</div>
 			</div>
-				<div class="row">
-					<div class="col-md-6"></div>
-					<div class="col-md-6">
-						<h2>Our Job</h2>
-						<h3>The Hard Part</h3>
-						<div>
-							<h4><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Notifications</h4>
-							<p>We will email and text (if we have phone numbers) reminders weekly until your groomsman get
-								their information in.</p>
-						</div>
-						<div>
-							<h4><i class="fa fa-hand-pointer-o" aria-hidden="true"></i> Information</h4>
-							<p>It is as easy as looking up your store by name, location, email or phone.</p>
-						</div>
-						<div>
-							<h4><i class="fa fa-user-plus" aria-hidden="true"></i></h4>
-							<p>All we ask for is there name and email to get them started</p>
-						</div>
+			<div class="row">
+				<div class="col-md-6">
+					<img src="#" alt="phone image" id="phone image">
+				</div>
+				<div class="col-md-6">
+					<h2>Our Job</h2>
+					<h3>The Hard Part</h3>
+					<div>
+						<h4><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Notifications</h4>
+						<p>We will email and text (if we have phone numbers) reminders weekly until your groomsman get
+							their information in.</p>
+					</div>
+					<div>
+						<h4><i class="fa fa-hand-pointer-o" aria-hidden="true"></i> Information</h4>
+						<p>It is as easy as looking up your store by name, location, email or phone.</p>
+					</div>
+					<div>
+						<h4><i class="fa fa-user-plus" aria-hidden="true"></i></h4>
+						<p>All we ask for is there name and email to get them started</p>
 					</div>
 				</div>
 			</div>
@@ -160,9 +164,9 @@
 									getting their information to the tux shop. With TuxName the process was easy."
 								</p>
 							</blockquote>
-							<div class="card-footer">
-								<cite title="Source Title"> -Dave Got It Right The Second Time</cite>
-							</div>
+						</div>
+						<div class="card-footer">
+							<cite title="Source Title"> -Dave Got It Right The Second Time</cite>
 						</div>
 					</div>
 				</div>
@@ -176,9 +180,9 @@
 									getting their information to the tux shop. With TuxName the process was easy."
 								</p>
 							</blockquote>
-							<div class="card-footer">
-								<cite title="Source Title"> -Dave Got It Right The Second Time</cite>
-							</div>
+						</div>
+						<div class="card-footer">
+							<cite title="Source Title"> -Dave Got It Right The Second Time</cite>
 						</div>
 					</div>
 				</div>
@@ -192,9 +196,9 @@
 									getting their information to the tux shop. With TuxName the process was easy."
 								</p>
 							</blockquote>
-							<div class="card-footer">
-								<cite title="Source Title"> -Dave Got It Right The Second Time</cite>
-							</div>
+						</div>
+						<div class="card-footer">
+							<cite title="Source Title"> -Dave Got It Right The Second Time</cite>
 						</div>
 					</div>
 				</div>
