working on front-end

--- a/static-ui/landing-page.html
+++ b/static-ui/landing-page.html
@@ -6,14 +6,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 		<!-- Bootstrap Link -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css"
-				integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 
 		<!-- Font Awesome Link -->
 		<script src="https://use.fontawesome.com/46c6e23a21.js"></script>
 
 		<!-- Tux CSS -->
-		<link rel="stylesheet" type="text/css" href="/static-ui/style.css">
+		<link rel="stylesheet" type="text/css" href="styles.css">
+
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -24,24 +24,17 @@
 				  integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
 				  crossorigin="anonymous"></script>
 
-		<!-- jQuery Form, Additional Methods, Validate -->
-		<script type="text/javascript"
-				  src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
-		<script type="text/javascript"
-				  src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
-		<script type="text/javascript"
-				  src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/additional-methods.min.js"></script>
-
 		<!-- Google reCAPTCHA -->
 
 		<!--Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Stardos+Stencil" rel="stylesheet">
 
 		<!-- Tux Favicon -->
-		<link rel="shortcut icon" href=""
-				type="image/x-icon">
+		<link rel="shortcut icon" href="" type="image/x-icon">
 	</head>
+
 	<body>
 		<!-- Navbar -->
 		<nav class="navbar navbar-expand-lg sticky-top navbar-light bg-light">
@@ -72,55 +65,38 @@
 			<div class="container">
 				<h1 class="display-3">Tux</h1>
 				<p class="lead">Modern Management for the Modern Man</p>
-				<p>There is enough to manage during your wedding, let us take care of your groomsman's outfits</p>
-			</div>
-		</div>
-		<!-- What We Do -->
-		<div class="container-fluid m-4 p-4 text-center">
-			<h2>Pain Free Management</h2>
-			<div class="row">
-				<div class="col-md-12">
-					<p>Managing Suit and Tux Rentals for your Wedding is a huge pain. We are the solution to pain free
-						management for you and your groomsmen.</p>
-				</div>
+				<!--<p>There is enough to manage during your wedding, let us take care of your groomsman's outfits</p>-->
 			</div>
 		</div>
 		<!-- How It Works -->
-		<div class="container-fluid m-4">
+		<div class="container-fluid m-4 about">
 			<div class="row">
-				<div class="col-md-6 align-self-center">
+				<div class="col-md-12 align-self-center">
 					<h2 class="section-title">ONE STOP SHOP</h2>
-					<p>We handle every part of the process all you need to do is create your event, and choose your tux shop
-						and add your groomsmen's details.</p>
-					<p>We can the emails, send reminders and get your groomsman information to the store without any work
-						foryou so you can focus on other duties.</p>
-					<p>And beleive it or not this is complete free (probably the only thing during your wedding that will
-						be)</p>
+					<p>We handle every part of the process all you need to do is create your event, and choose your tux shop and add your groomsmen's details.</p>
+					<p>We can the emails, send reminders and get your groomsman information to the store without any work for you so you can focus on other duties.</p>
+					<p>And believe it or not this is complete free (probably the only thing during your wedding that will be)</p>
 					<button type="button" class="btn btn-outline-primary">Sign-Up</button>
-				</div>
-				<div class="col-md-6 tux">
-					<img src="https://dl.dropboxusercontent.com/s/2d8kgsuzgegzbuh/tux2.jpg?dl=0" alt="tux" id="tux">
 				</div>
 			</div>
 		</div>
 		<!-- The Process -->
-		<div class="container">
+		<div class="container p-4">
 			<div class="row">
 				<div class="col-md-6">
-					<h2>Your Job</h2>
-					<h3>The Easy Party</h3>
+					<h2 class="section-title">YOUR JOB..the easy part</h2>
 					<div>
-						<h4><span class="step">01</span> Sign-Up</h4>
-						<p>Provide your name and email as well as your a few wedding details.</p>
+						<h4 class="mb-0"><span class="step">01</span> Sign-Up</h4>
+						<p class="step-detail mt-0">Provide your name and email as well as your a few wedding details.</p>
 					</div>
 					<div>
-						<h4><span class="step">02</span> Choose Your Store</h4>
-						<p>It is as easy as looking up your store by name, location, email or phone.</p>
+						<h4 class="mb-0"><span class="step">02</span> Choose Your Store</h4>
+						<p class="step-detail mt-0">It is as easy as looking up your store by name, location, email or phone.</p>
 					</div>
 
 					<div>
-						<h4><span class="step">03</span> Add Your Groomsman Detail</h4>
-						<p>All we ask for is there name and email to get them started</p>
+						<h4 class="mb-0"><span class="step">03</span> Add Your Groomsman Detail</h4>
+						<p class="step-detail  mt-0">All we ask for is there name and email to get them started</p>
 					</div>
 				</div>
 				<div class="col-md-6 landing-image">
@@ -132,12 +108,10 @@
 					<img src="#" alt="phone image" id="phone image">
 				</div>
 				<div class="col-md-6">
-					<h2>Our Job</h2>
-					<h3>The Hard Part</h3>
+					<h2 class="section-title">OUR JOB...the hard part</h2>
 					<div>
 						<h4><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Notifications</h4>
-						<p>We will email and text (if we have phone numbers) reminders weekly until your groomsman get
-							their information in.</p>
+						<p>We will email and text (if we have phone numbers) reminders weekly until your groomsman get their information in.</p>
 					</div>
 					<div>
 						<h4><i class="fa fa-hand-pointer-o" aria-hidden="true"></i> Information</h4>
@@ -150,6 +124,7 @@
 				</div>
 			</div>
 		</div>
+
 		<!-- Testimonials -->
 		<div class="container-fluid m-0 p-4" id="testimonials">
 			<h3 class="p-4 text-center">Don't Believe Us, Believe These Trustworthy Guys</h3>
