--- a/static-ui/company-landing-page.html
+++ b/static-ui/company-landing-page.html
@@ -13,7 +13,7 @@
 		<script src="https://use.fontawesome.com/46c6e23a21.js"></script>
 
 		<!-- Skapa Development CSS -->
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="styles.css">
 
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
