--- a/static-ui/wedding-detail.html
+++ b/static-ui/wedding-detail.html
@@ -43,14 +43,14 @@
 	</head>
 	<body>
 		<section>
-			<h1>Weddings Details</h1>
-			<h3>Wedding Name:</h3>
-			<h3>Wedding Party Admin:</h3>
-			<h3>Return By Date:</h3>
-			<h3>Wedding Date:</h3>
-			<h3>Store:</h3>
-			<button>Add Groomsman</button>
-			<table>
+			<h1 class="mb-3">Weddings Details</h1>
+			<h5 class="m-2">Wedding Name:</h5>
+			<h5 class="m-2">Wedding Party Admin:</h5>
+			<h5 class="m-2">Return By Date:</h5>
+			<h5 class="m-2">Wedding Date:</h5>
+			<h5 class="m-2">Store:</h5>
+			<button class="m-4">Add Groomsman</button>
+			<table class="table justify-content-center table-striped table-bordered table-hover">
 				<tr>
 					<th>Name</th>
 					<th>Email</th>
@@ -72,11 +72,13 @@
 					<td>No</td>
 					<td>
 						<i class="fa fa-comment" aria-hidden="true"></i>
-						<i class="fa fa-envelope" aria-hidden="true"></i></td>
-					<td>Edit Details</td>
+						<i class="fa fa-envelope" aria-hidden="true"></i>
+					</td>
+					<td>
+						<i class="fa fa-pencil" aria-hidden="true"></i>
+					</td>
 				</tr>
 			</table>
-			<button>Add Groomsman</button>
 		</section>
 	</body>
 </html>
