began building front-end

--- a/webpack/index.html
+++ b/webpack/index.html
@@ -18,7 +18,7 @@
 			})();
 		</script>
 
-		<title>Angular 5 Example App</title>
+		<title>Tux</title>
 	</head>
 	<body>
 		<tux-app>Loading&hellip;</tux-app>
