--- a/static-ui/card.html
+++ b/static-ui/card.html
@@ -146,15 +146,17 @@
 							</div>
 						</div>
 						<div class="row">
-							<div class="col-xs-4">
+							<div class="col-xs-3"></div>
+							<div class="col-xs-2">
 								<button>Submit</button>
 							</div>
-							<div class="col-xs-4">
-								<button>Edit</button>
+							<div class="col-xs-2">
+								<button>Reviewed</button>
 							</div>
-							<div class="col-xs-4">
+							<div class="col-xs-2">
 								<button>Print</button>
 							</div>
+							<div class="col-xs-3"></div>
 						</div>
 					</form>
 				</div>
